Added swagger yaml for mealplan create resource, validator and corrected return errors in the controller
